src/components/MovieShowcase/MovieShowcase.css
section#latest .latest-item img {
  min-height: 100%;
  width: 100%;
}

section#latest button {
  max-height: 250px;
  padding: 0;
  overflow: hidden;
}

section#latest .latest-item {
  position: relative;
}

section#latest .latest-item:hover .overlay {
  opacity: 0.8;
  background-color: rgba(17, 17, 23, 0.9);
}

section#latest .latest-item:hover .chevron-icon {
  opacity: 0.5;
  transform: none;
}
section#latest .overlay {
  position: absolute;
  top: 0;
  right: 0;
  width: 100%;
  height: 100%;
  background-color: rgb(17, 45, 50);
  opacity: 0.5;
  color: #fff;
  transition: all 0.5s;
}

section#latest .overlay .chevron-icon {
  transform: translateY(20px);
  transition: all 0.5s;
  opacity: 0;
  font-size: 2rem;
}

.card-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  opacity: 0;
  transition: opacity 0.6s ease;
  display: flex;
  align-items: center;
  justify-content: center;
  color: white;
  font-size: 1.2rem;
  font-weight: bold;
  text-align: center;
}

.card-img-overlay-container {
  position: relative;
}

.card-img-overlay-container:hover .card-overlay {
  opacity: 1;
}

.list-group-item-hover:hover {
  background-color: #0000005b;
  transition: background-color 0.3s ease;
}

